# Event-Query-Engine

./: .gitignore  .replit  README.md  pyproject.toml  replit.md
app/: config.py  db.py  main.py
app/api/: endpoints.py
app/models/: event.py
app/repositories/: event_repository.py
app/services/: event_service.py
server/: index.ts
tests/: conftest.py  test_analytics.py  test_database.py  test_endpoints.py
